<resources>
    <string name="app_name">WikiGami</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Datos del perfil-->
    <string name="Perfil">Mi perfil</string>
    <string name="User">Nombre de usuario</string>
    <string name="Email">Correo</string>
    <string name="Password">Contraseña</string>
    <string name="Actualizar">Editar información</string>
    <string name="UpdatePass">Cambiar Contraseña</string>
    <string name="closeSesion">Cerrar Sesión</string>

    <!--Cambio de contraseña-->
    <string name="MisCredencialesTXT">Mis credenciales</string>
    <string name="CorreoActualTXT">Correo actual: </string>
    <string name="CorreoActual"> -- </string>
    <string name="PassActualTXT">Contraseña actual: </string>
    <string name="PassActual"> -- </string>
    <string name="ActualPassET">Contraseña actual </string>
    <string name="NuevoPassET">Nueva contraseña </string>
    <string name="CambiarPassBtn">Cambiar Contraseña </string>
    <string name="NotaTXT">Nota: si cambia de contraseña, se procederá a cerrar sesión automáticamente</string>

    <string-array name="dificultades">
        <item>Básico</item>
        <item>Intermedio</item>
        <item>Avanzado</item>
    </string-array>
    <string-array name="filtros">
        <item>Sin filtro</item>
        <item>Básico</item>
        <item>Intermedio</item>
        <item>Avanzado</item>
    </string-array>
</resources>