<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/f2a409da12284e173e655e297485b247"
    tools:context=".CambiarPassword.CambiarPassword">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/MisCredencialesTXT"
            android:text="@string/MisCredencialesTXT"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--Correo Actual de BD-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/CorreoActualTXT"
                android:text="@string/CorreoActualTXT"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/CorreoActual"
                android:text="@string/CorreoActual"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Contraseña Actual de BD-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/PassActualTXT"
                android:text="@string/PassActualTXT"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/PassActual"
                android:text="@string/PassActual"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Ingresar Contraseña actual-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/ActualPassET"
                android:hint="@string/ActualPassET"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Ingresar Contraseña nueva-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/NuevoPassET"
                android:hint="@string/NuevoPassET"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Boton para cambiar contraseña-->
        <Button
            android:id="@+id/CambiarPassbtn"
            android:text="@string/CambiarPassBtn"
            android:textColor="@color/white"
            android:background="@color/azul2"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>