<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/f9a9004a8f777579ef255ec979d0188b"
    tools:context=".Perfil">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/amarillo"
        app:itemIconTint="@drawable/serlector"
        app:itemTextColor="@drawable/serlector"
        app:menu="@menu/bottom_navigation" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/Perfil"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#000"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/UserName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/User"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="25sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/pngtree_awesome_colorful_origami_bird_logo_design_image_191178_removebg_preview_removebg_preview"
            app:civ_border_color="@color/azul1"
            app:civ_border_width="2dp" />


        <TextView
            android:id="@+id/MailData"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/Email"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/EliminarCuenta"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_baseline_mode_24"
            android:drawablePadding="15dp"
            android:padding="15dp"
            android:text="@string/DeleteAccount"
            android:textColor="#fff"
            android:textSize="15sp" />

        <Button
            android:id="@+id/ActualizarPass"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_pass"
            android:drawablePadding="15dp"
            android:padding="15dp"
            android:text="@string/UpdatePass"
            android:textColor="#fff"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_CloseSesion"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_logout"
            android:drawablePadding="15dp"
            android:padding="15dp"
            android:text="@string/closeSesion"
            android:textColor="#fff"
            android:textSize="15sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>